k8s/network-policies/default-deny-workload.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-workload
  namespace: workload
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
